[gd_scene load_steps=3 format=2]

[ext_resource path="res://generator/gui/main.gd" type="Script" id=1]
[ext_resource path="res://generator/gui/target_edit.tscn" type="PackedScene" id=2]

[node name="main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="open_scene" type="FileDialog" parent="."]
margin_right = 645.0
margin_bottom = 384.0

[node name="hb" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="vb" type="VBoxContainer" parent="hb"]
margin_right = 142.0
margin_bottom = 600.0

[node name="TargetList" type="ItemList" parent="hb/vb"]
margin_right = 142.0
margin_bottom = 548.0
size_flags_vertical = 3

[node name="hb" type="HBoxContainer" parent="hb/vb"]
margin_top = 552.0
margin_right = 142.0
margin_bottom = 576.0

[node name="AddTarget" type="Button" parent="hb/vb/hb"]
margin_right = 80.0
margin_bottom = 24.0
text = "Add Target"

[node name="new_target" type="LineEdit" parent="hb/vb/hb"]
margin_left = 84.0
margin_right = 142.0
margin_bottom = 24.0

[node name="Save" type="Button" parent="hb/vb"]
margin_top = 580.0
margin_right = 142.0
margin_bottom = 600.0
text = "Save"

[node name="target_edit" parent="." instance=ExtResource( 2 )]
visible = false

